# runtime

src/coreclr/: CMakeLists.txt  clrdefinitions.cmake  clrfeatures.cmake
src/coreclr/System.Private.CoreLib/: System.Private.CoreLib.csproj
src/coreclr/dlls/mscoree/coreclr/: CMakeLists.txt
src/coreclr/hosts/corewasmrun/: CMakeLists.txt  corewasmrun.cpp  index.html
src/coreclr/inc/: clrnt.h  loaderheap.h  switches.h
src/coreclr/interpreter/: compiler.h  interpretershared.h
src/coreclr/jit/: CMakeLists.txt
src/coreclr/minipal/Unix/: doublemapping.cpp
src/coreclr/pal/inc/: pal.h
src/coreclr/pal/src/init/: pal.cpp
src/coreclr/pal/src/loader/: module.cpp
src/coreclr/pal/src/map/: map.cpp
src/coreclr/pal/src/thread/: thread.cpp
src/coreclr/vm/: CMakeLists.txt  assembly.cpp  binder.cpp  callcounting.cpp  callingconvention.h  ceemain.cpp  codeman.cpp  codeversion.cpp  corelib.h  corhost.cpp  exceptionhandling.cpp  gcinfodecoder.cpp  interpexec.cpp  jitinterface.cpp  methodtable.cpp  precode.cpp  precode.h  prestub.cpp  threads.cpp
src/coreclr/vm/wasm/: asmhelpers.c  cgencpu.h  gmscpu.h  helpers.c  helpers.cpp
src/libraries/System.Private.CoreLib/src/: System.Private.CoreLib.Shared.projitems
src/libraries/System.Private.CoreLib/src/System/: AppContext.cs
src/mono/mono/mini/: mini-llvm.c  simd-intrinsics.c  simd-methods.h
src/mono/sample/wasm/browser/: Program.cs
src/mono/sample/wasm/browser-bench/: BenchTask.cs  Program.cs  Prose.cs  Wasm.Browser.Bench.Sample.csproj  WebSocket.cs
src/mono/sample/wasm/browser-bench/files/: powerapps.json
src/mono/wasi/: wasi.proj
src/mono/wasm/: wasm.proj
src/mono/wasm/runtime/: driver.c
src/mono/wasm/tools/wa-info/: Directory.Build.props
src/native/minipal/: random.c
src/tasks/WasmAppBuilder/: ProducersSection.cs  WasmAppBuilder.csproj  WasmRewriter.cs
src/tests/: build.cmd  run.cmd  run.py
src/tests/Common/: tests.targets
(+7 files in other folders)
